--- a/src/_sass/_site-footer.scss
+++ b/src/_sass/_site-footer.scss
@@ -1,6 +1,5 @@
 .site-footer {
 	position: relative;
-	z-index: -2;
 	font-size: em(14, 18);
 	background-color: var(--site-footer-bg);
 	color: var(--site-footer-text);
@@ -29,5 +28,4 @@
 	right: 0;
 	transform: translateY(#{rem(17)}) translateX(#{rem(-100)});
 	width: rem(500);
-	z-index: -1;
 }
